@@ -25,8 +25,8 @@ Using the Google Chart Tools with R
 \tabular{ll}{
 	Package: \tab googleVis\cr
 	Type: \tab Package\cr
-	Version: \tab 0.4.0\cr
-	Date: \tab 2013-02-24\cr
+	Version: \tab 0.4.1\cr
+	Date: \tab 2013-03-07\cr
 	License: \tab GPL version 2 or later\cr
 	 }
 	}
