@@ -1,4 +1,4 @@
-googleVis 0.4.0 [2013-03-03]
+googleVis 0.4.0 [2013-03-07]
 ----------------------------
 
 NEW FEATURES
@@ -6,6 +6,11 @@ NEW FEATURES
  * The core charts (e.g. line, area, bar, column and combo charts)
    accept now also date variables for the x-axis. Thanks to Sebastian
    Campbell for pointing this out.
+
+Changes 
+
+ * The WorldBank demo uses now the WDI package.
+   Thanks to John Maindonald for providing the code.
 
 Bug Fixes
 
